updated docs, trying to skip again.

--- a/examples/user_guide/user_guide.ipynb
+++ b/examples/user_guide/user_guide.ipynb
@@ -7,13 +7,8 @@
     "To begin using **GSForege** you will want to get your data into the `AnnotatedGEM` object.\n",
     "How you choose to do this depends on the state of your data.\n",
     "\n",
-    "[**Creating an AnnotatedGEM from text files**](Creating_an_AnnotatedGEM.ipynb)\n",
+    "[**Creating an AnnotatedGEM from text files**](AnnotatedGEM_from_pandas.ipynb)\n",
     "> How to load your count and label .csv or .txt files into an `xarray.Dataset` using `GSForge`, and save them as a single netcdf (.nc) file for future use.\n",
-    "\n",
-    "An easy way to get started is with publicly available data.\n",
-    "NCBI hosts the Gene Expression Omnibus, a database that stores gene expression matrices and associated labels.\n",
-    "\n",
-    "[**Creating an AnnotatedGEM from an NCBI GEO ID**](AnnotatedGEM_from_NCBI_GEO.ipynb)\n",
     "\n",
     "Once the count matrix and annotations have been stored in an AnnotatedGEM object, you can begin selecting genes.\n",
     "\n",
@@ -30,12 +25,7 @@
     "`GSForge` allows you to store multiple 'versions' of the count matrix in a single `AnnotatedGEM` object.\n",
     "\n",
     "[**Normalizing GEMs**](GEM_Normalization.ipynb)\n",
-    "> How to run and (optionally) save different normalizations to the same `AnnotatedGEM` object.\n",
-    "\n",
-    "If your curious as to how data is passed through the `GSForge` package.\n",
-    "\n",
-    "[**Interface Guide**](Interface_Guide.ipynb)\n",
-    "> Understanding how the `GSForge.Interface` class, which is the base of most of the `GSForge` API, selects and returns data."
+    "> How to run and (optionally) save different normalizations to the same `AnnotatedGEM` object."
    ]
   },
   {
