--- a/examples/user_guide/workflow_guide/Using_Workflows.ipynb
+++ b/examples/user_guide/workflow_guide/Using_Workflows.ipynb
@@ -2479,8 +2479,8 @@
     }
    ],
    "source": [
-    "agem = gsf.AnnotatedGEM(AGEM_PATH)\n",
-    "agem"
+    "# agem = gsf.AnnotatedGEM(AGEM_PATH)\n",
+    "# agem"
    ]
   },
   {
@@ -2508,7 +2508,7 @@
     }
    ],
    "source": [
-    "list(Path(GDS2910_boruta_result_path).expanduser().resolve().glob(\"*.nc\"))"
+    "# list(Path(GDS2910_boruta_result_path).expanduser().resolve().glob(\"*.nc\"))"
    ]
   },
   {
