--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -29,6 +29,22 @@
     "\n",
     "The documentation is built using travis ci integration.\n",
     "\n",
+    "**Skipping Notebooks**\n",
+    "\n",
+    "`nbsite` finds notebooks via the following. ([source](https://github.com/pyviz-dev/nbsite/blob/master/nbsite/cmd.py))\n",
+    "\n",
+    "```python\n",
+    "glob.glob(os.path.join(paths['doc'], '**', '*.ipynb'), recursive=True):\n",
+    "```\n",
+    "\n",
+    "Run this from the terminal to see the list of notebooks.\n",
+    "\n",
+    "```bash\n",
+    "\n",
+    "python -c \"import glob, os, pprint; pprint.pprint(list(glob.glob(os.path.join('examples', '**', '*.ipynb'), recursive=True)))\"\n",
+    "\n",
+    "```\n",
+    "\n",
     "### Using Docker\n",
     "\n",
     "The docker images used by `GSForge` are based on the [Jupyter Docker Stacks](https://jupyter-docker-stacks.readthedocs.io/en/latest/index.html).\n",
