updates to docs

--- a/examples/user_guide/plotting_guide/GeneSet_Overlap_Heatmaps.ipynb
+++ b/examples/user_guide/plotting_guide/GeneSet_Overlap_Heatmaps.ipynb
@@ -1774,7 +1774,7 @@
     }
    ],
    "source": [
-    "gsf.plots.lineament_overlap_heatmap(gsc).opts(\n",
+    "gsf.plots.geneset_overlap_heatmap(gsc).opts(\n",
     "    width=300, height=300, xrotation=90, xlabel=\"\", ylabel=\"\")"
    ]
   },
@@ -1807,10 +1807,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
