--- a/examples/Welcome.ipynb
+++ b/examples/Welcome.ipynb
@@ -8,23 +8,15 @@
     "\n",
     "*GSForge* is a Python package for condition-specific gene set selection, comparison, quality assessment and visualization for traditional and machine learning approaches to gene expression matrix analysis.\n",
     "\n",
-    "*GSForge* can be used in several ways and places in the analysis workflow per this flowchart:\n",
+    "*GSForge* can be used in several ways:\n",
     "\n",
-    "<img src=\"assets/GSForge_flowchart.svg\" alt=\"GSForge Flowchart\" width=\"750\"/>\n",
-    "\n",
-    "Note:\n",
-    "+ Functions and models provided by *GSForge* are noted in **bold**.\n",
-    "+ Tutorials and examples provided by these docs are denoted with a star.\n",
+    "<img src=\"assets/GSForge_Overview.svg\" alt=\"GSForge Flowchart\" width=\"750\"/>\n",
     "\n",
     "### Tutorial Links\n",
     "\n",
     "+ [User Guide](user_guide/index)\n",
-    "    + [Creating an AnnotatedGEM](user_guide/Creating_an_AnnotatedGEM)\n",
-    "    + [Selecting Genes with Boruta](user_guide/Selecting_Genes_with_Boruta)\n",
-    "    + [Storing DESeq2 results as a GeneSet](user_guide/Creating_an_AnnotatedGEM)\n",
-    "    + [Storing EdgeR results as a GeneSet](user_guide/Creating_an_AnnotatedGEM)\n",
-    "    + [GeneSet Quality Assesment](user_guide/GeneSet_Analysis)\n",
-    "    + [Plotting Guide](user_guide/plotting_guide/index)\n",
+    "+ [Plotting Guide](user_guide/plotting_guide/index)\n",
+    "+ [Workflow Guide](user_guide/workflow_guide/index)\n",
     "\n",
     "---"
    ]
@@ -37,6 +29,15 @@
   },
   "language_info": {
    "name": ""
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
