--- a/examples/Welcome.ipynb
+++ b/examples/Welcome.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "*GSForge* is a Python package for condition-specific gene set selection, comparison, quality assessment and visualization for traditional and machine learning approaches to gene expression matrix analysis.\n",
     "\n",
-    "*GSForge* can be used in several ways:\n",
+    "<img src=\"assets/GSForge_Overview.svg\" alt=\"GSForge Flowchart\" width=\"750\"/>\n",
     "\n",
     "<img src=\"assets/GSForge_Overview.svg\" alt=\"GSForge Flowchart\" width=\"750\"/>\n",
     "\n",
