updated broken paths and doc images

--- a/examples/About.ipynb
+++ b/examples/About.ipynb
@@ -31,6 +31,8 @@
     "\n",
     "And you should seriously consider using *GeneSelector* if you find yourself in more than one of the above categories.\n",
     "\n",
+    "![GSForge and GEMmaker in an Experimental Design Cycle](../assets/rna_seq_generation_highlights.svg)\n",
+    "\n",
     "---"
    ]
   },
