--- a/examples/user_guide/plotting_guide/UMAP_Panels_and_views.ipynb
+++ b/examples/user_guide/plotting_guide/UMAP_Panels_and_views.ipynb
@@ -1916,7 +1916,7 @@
     }
    ],
    "source": [
-    "gsf.panels.UMAP_Panel(gsc).panel()"
+    "gsf.panels.UMAP_Panel(interface=gsf.Interface(gsc)).panel()"
    ]
   },
   {
@@ -1944,6 +1944,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
