--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -24,7 +24,6 @@
     "pytest --nbsmoke-run examples/*.ipynb\n",
     "pytest --nbsmoke-run examples/user_guide/*.ipynb\n",
     "pytest --nbsmoke-run examples/user_guide/plotting_guide/*.ipynb\n",
-    "\n",
     "```\n",
     "\n",
     "The documentation is built using travis ci integration.\n",
@@ -44,6 +43,26 @@
     "python -c \"import glob, os, pprint; pprint.pprint(list(glob.glob(os.path.join('examples', '**', '*.ipynb'), recursive=True)))\"\n",
     "\n",
     "```\n",
+    "\n",
+    "Normally notebooks are viewed by an restructured text directive.\n",
+    "These container files are constructed automatically during the travis build via:\n",
+    "\n",
+    "```bash\n",
+    "nbsite generate-rst --org SystemsGenetics --project-name GSForge\n",
+    "```\n",
+    "\n",
+    "If a notebook should not be run by travis for whatever reason, \n",
+    "the containing .rst file should be generated using the above command.\n",
+    "Then the directive can be modified by setting the skip_execute option to `True`.\n",
+    "\n",
+    "```\n",
+    ".. notebook:: GSForge ../relative/path/to/notebook.ipynb\n",
+    "    :offset: 0\n",
+    "    :skip_execute: True\n",
+    "```\n",
+    "\n",
+    "The `offset` option controls how many cells are to be skipped.\n",
+    "This is there since the default uses the notebook name as the displayed title.\n",
     "\n",
     "### Using Docker\n",
     "\n",
