--- a/examples/user_guide/R_integration_guide/DESeq2_GeneSets.ipynb
+++ b/examples/user_guide/R_integration_guide/DESeq2_GeneSets.ipynb
@@ -4,8 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DESeq2 Integration\n",
-    "\n",
     "*This notebook covers how to run and load a basic `DESeq2` DEG result as a `GSForge.GeneSet`.*\n",
     "\n",
     "---"
@@ -393,6 +391,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
