--- a/examples/user_guide/R_integration_guide/EdgeR_GeneSets.ipynb
+++ b/examples/user_guide/R_integration_guide/EdgeR_GeneSets.ipynb
@@ -1,11 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Coming soon..."
+   ]
   }
  ],
  "metadata": {
@@ -25,6 +29,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
