--- a/examples/Welcome.ipynb
+++ b/examples/Welcome.ipynb
@@ -10,8 +10,6 @@
     "\n",
     "<img src=\"assets/GSForge_Overview.svg\" alt=\"GSForge Flowchart\" width=\"750\"/>\n",
     "\n",
-    "<img src=\"assets/GSForge_Overview.svg\" alt=\"GSForge Flowchart\" width=\"750\"/>\n",
-    "\n",
     "### Tutorial Links\n",
     "\n",
     "+ [User Guide](user_guide/index)\n",
@@ -24,19 +22,29 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python (base)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
