corrected calls for set functions

--- a/examples/user_guide/AnnotatedGEM_from_pandas.ipynb
+++ b/examples/user_guide/AnnotatedGEM_from_pandas.ipynb
@@ -8,8 +8,7 @@
     "\n",
     "A count matrix and an annotation table are often created as separate text files.\n",
     "The count matrix is often formatted with samples as columns and genes as rows due to the way counts are calculated.\n",
-    "An annotation file must have a matching 'sample' index to the count file.\n",
-    "\n"
+    "An annotation file must have a matching 'sample' index to the count file."
    ]
   },
   {
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,16 +103,82 @@
       "text/plain": [
        "[PosixPath('/home/tyler/GSForge_demo_data/osfstorage'),\n",
        " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/srx_sample_annots.txt'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/DEG_gene_sets'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/rice.nc'),\n",
        " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/all.gff3'),\n",
        " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/rice_heat_drought.GEM.raw.txt'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/TPC2016-00158-LSBR2_Supplemental_File_1.csv'),\n",
        " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets'),\n",
        " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/osativa.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Treatment.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Subspecies.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Genotype.nc')]"
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/TPC2016-00158-LSBR2_Supplemental_File_5.txt'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/DEG_gene_sets/deseq2_treatment.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Genotype.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Subspecies.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Treatment.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/019524_b48286.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/b8df5c_fcadb6.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/921936_8c7f65.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/921936_7717b7.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4f9452_26da90.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f79407_a3f0bf.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/26b197_c7df13.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/9fda5b_009ca3.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/3a6380_737034.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/2e4ade_bf86e6.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/488d45_7dbc79.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/8fa5fc_ad023d.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/e90ecb_ac8755.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/21a38c_c68f41.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/cfa346_946b08.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/75bfe3_5b34f5.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/cfa346_ae0e6c.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/1ec403_b17615.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a6130e_63b28c.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f962d6_3da9fb.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/eb6a41_a0e01c.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/8fa5fc_04e12e.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/019524_babd6a.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/488d45_fd0554.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a45d98_14d7bc.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/36b179_f8be07.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a45d98_8a0b2f.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/749d0e_498d3d.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/891c83_4b02e6.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/3a6380_38175b.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/0a0991_556f7b.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/b8df5c_4d728d.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/dc6a48_b3abce.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4d726f_5150af.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/c3e5ee_666b04.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/1ec403_a15667.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/75bfe3_80c26f.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/0a0991_4c7dd4.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d75652_e7d2d3.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/c3e5ee_14d3cd.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/749d0e_e0cb46.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a6130e_720599.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/2e4ade_61218e.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/21a38c_bbb811.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d38fb9_96caf8.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/644cfd_3c8807.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4d726f_b548d8.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f962d6_d77341.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4f9452_d04106.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/e90ecb_599a80.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/644cfd_4554ce.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/891c83_2c969d.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/9fda5b_806573.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d75652_5babcd.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f79407_d52253.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/dc6a48_a65673.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/26b197_1a49d0.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/eb6a41_ff5be8.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d38fb9_de32a5.nc'),\n",
+       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/36b179_451cf8.nc')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -208,15 +273,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.17 s, sys: 232 ms, total: 2.4 s\n",
-      "Wall time: 2.4 s\n"
+      "CPU times: user 2.2 s, sys: 330 ms, total: 2.53 s\n",
+      "Wall time: 2.68 s\n"
      ]
     }
    ],
@@ -227,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +504,7 @@
        "[5 rows x 475 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,15 +522,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.71 ms, sys: 191 µs, total: 5.9 ms\n",
-      "Wall time: 5.19 ms\n"
+      "CPU times: user 4.65 ms, sys: 0 ns, total: 4.65 ms\n",
+      "Wall time: 4.62 ms\n"
      ]
     }
    ],
@@ -476,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +642,7 @@
        "SRX1423938  SRR2931044   CONTROL    45   leaf       AZ   Japonica"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +698,7 @@
        "    Sample 475"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -661,8 +726,8 @@
        "<xarray.Dataset>\n",
        "Dimensions:     (Gene: 55986, Sample: 475)\n",
        "Coordinates:\n",
-       "  * Gene        (Gene) object 'LOC_Os06g05820' ... 'LOC_Os07g03418'\n",
        "  * Sample      (Sample) object 'SRX1423934' 'SRX1423935' ... 'SRX1424408'\n",
+       "  * Gene        (Gene) object 'LOC_Os06g05820' ... 'LOC_Os07g03418'\n",
        "Data variables:\n",
        "    SampleSRR   (Sample) object 'SRR2931040' 'SRR2931041' ... 'SRR2931514'\n",
        "    Treatment   (Sample) object 'CONTROL' 'CONTROL' ... 'RECOV_DROUGHT'\n",
@@ -670,11 +735,10 @@
        "    Tissue      (Sample) object 'leaf' 'leaf' 'leaf' ... 'leaf' 'leaf' 'leaf'\n",
        "    Genotype    (Sample) object 'AZ' 'AZ' 'AZ' 'AZ' 'AZ' ... 'TD' 'TD' 'TD' 'TD'\n",
        "    Subspecies  (Sample) object 'Japonica' 'Japonica' ... 'Indica' 'Indica'\n",
-       "    counts      (Sample, Gene) int64 20 0 0 0 0 0 200 ... 19 0 52 335 0 666 0\n",
-       "    lengths     (Gene) float64 1.14e+04 554.0 464.0 ... 4.556e+03 446.0"
+       "    counts      (Sample, Gene) int64 20 0 0 0 0 0 200 ... 19 0 52 335 0 666 0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +830,7 @@
        "1  ID=LOC_Os01g01010.1;Name=LOC_Os01g01010.1;Pare...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +903,7 @@
        "PosixPath('/home/tyler/GSForge_demo_data/osfstorage/rice.nc')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,10 +984,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
