doc updates, adding tests

--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -8,41 +8,58 @@
     }
    },
    "source": [
+    "### Overview\n",
+    "\n",
+    "Maintaining GSForge involves:\n",
+    "\n",
+    "+ PyPi package index.\n",
+    "+ Documentation website \n",
+    "    + hosted by github pages\n",
+    "    + Built with [`nbsite`](https://nbsite.holoviz.org/), a version of `sphinx` which is used by Readthedocs.\n",
+    "+ Docker images\n",
+    "    + Interactive image, this is likely to be the source for a future 'SciAPP' as well.\n",
+    "    + Workflow images.\n",
+    "    \n",
+    "The above repositories and websites are all kept up-to-date using travis ci.\n",
+    "    \n",
+    "\n",
     "### Travis CI\n",
     "\n",
-    "Travis CI is activated upon every push to the master branch.\n",
-    "Then, via the `.travis.yml` file:\n",
-    "+ Demo data is updated if needed.\n",
-    "+ The dockerfiles are built and pushed if the package installs correctly.\n",
-    "+ The notebook files are tested, and if no cells fail to run the documentation is updated.\n",
+    "Travis integration is setup through the `.travis.yml` file.\n",
     "\n",
-    "### nbsite & Documentation\n",
     "\n",
-    "You can test if all of the example notebooks run with [nbsmoke](https://github.com/pyviz-dev/nbsmoke) (this is what the travis ci will do) to check if they all run.\n",
+    "### Generating the Documentation\n",
     "\n",
-    "```bash\n",
-    "pytest --nbsmoke-run examples/*.ipynb\n",
-    "pytest --nbsmoke-run examples/user_guide/*.ipynb\n",
-    "pytest --nbsmoke-run examples/user_guide/plotting_guide/*.ipynb\n",
-    "```\n",
+    "**Prerequisites:**\n",
     "\n",
-    "The documentation is built using travis ci integration.\n",
+    "+ [`nbsite`](https://github.com/pyviz-dev/nbsite) *This is a requirement for the classes defined based upon `param.Parameterized` to render nicely.*\n",
+    "    `nbsite` is essentially a wrapper for a call to `sphinx-build`,\n",
+    "    with some additional tools to handle jupyter notebooks.\n",
+    "    This means that [sphinx](https://www.sphinx-doc.org/en/master/usage/configuration.html) can be used as normal, \n",
+    "    including being configured via `doc/conf.py`.\n",
+    "+ [`nbsmoke`](https://github.com/pyviz-dev/nbsmoke)\n",
+    "    For basic notebook checks.\n",
+    " \n",
     "\n",
-    "**Skipping Notebooks**\n",
+    "**Initial setup notes:**\n",
+    " \n",
+    "The documentation is generated per the [usage docs](https://nbsite.holoviz.org/Usage.html) of `nbsite`.\n",
+    "See the `.travis.yml` file to see how `nbsite` is called to build the docs.\n",
     "\n",
-    "`nbsite` finds notebooks via the following. ([source](https://github.com/pyviz-dev/nbsite/blob/master/nbsite/cmd.py))\n",
+    "### Maintaining the Docs\n",
     "\n",
-    "```python\n",
-    "glob.glob(os.path.join(paths['doc'], '**', '*.ipynb'), recursive=True):\n",
-    "```\n",
+    "1. Ensure that all `.rst` files have their table of contents (toc) updated.\n",
+    "2. **Notebooks**\n",
+    "    + If a notebook is removed, ensure the corresponding `.rst` file is no longer in the repository.\n",
+    "    + Notebooks are evaluated upon each update to the documentation, \n",
+    "      unless the evaluated notebook is found locally, or an `.rst` directive declares `:skip_execute: True`.\n",
+    "      Therefor `.rst` files that must have non-default directives must be added to the repository.\n",
+    "3. **API**\n",
+    "    + The docstrings within `GSForge` are written with [RestructuredText](https://docutils.sourceforge.io/rst.html).\n",
+    "    + The core classes are built upon `param.Parameterized`, ensure parameters are documented.\n",
     "\n",
-    "Run this from the terminal to see the list of notebooks.\n",
     "\n",
-    "```bash\n",
-    "\n",
-    "python -c \"import glob, os, pprint; pprint.pprint(list(glob.glob(os.path.join('examples', '**', '*.ipynb'), recursive=True)))\"\n",
-    "\n",
-    "```\n",
+    "#### More on Notebooks\n",
     "\n",
     "Normally notebooks are viewed by an restructured text directive.\n",
     "These container files are constructed automatically during the travis build via:\n",
@@ -64,38 +81,19 @@
     "The `offset` option controls how many cells are to be skipped.\n",
     "This is there since the default uses the notebook name as the displayed title.\n",
     "\n",
-    "### Using Docker\n",
     "\n",
-    "The docker images used by `GSForge` are based on the [Jupyter Docker Stacks](https://jupyter-docker-stacks.readthedocs.io/en/latest/index.html).\n",
-    "\n",
-    "***Update the image***\n",
-    "```bash\n",
-    "docker pull systemsgenetics/gsforge_interactive:latest\n",
-    "```\n",
-    "\n",
-    "To run `GSForge` using a jupyter notebook from a docker image:\n",
-    "\n",
-    "***Jupyter Lab***\n",
+    "**Testing Notebooks** *(optional)*\n",
+    "    \n",
+    "You can test if all of the example notebooks run with `nbsmoke` (this is what the travis ci will do) to check if they all run.\n",
     "\n",
     "```bash\n",
-    "docker run --rm -p 10000:8888 -e JUPYTER_ENABLE_LAB=yes -v \"$PWD\":/home/jovyan/work systemsgenetics/gsforge_interactive:latest\n",
+    "pytest --nbsmoke-run examples/**/*.ipynb\n",
     "```\n",
     "\n",
-    "***Jupyter Notebook***\n",
     "\n",
-    "```bash\n",
-    "docker run -p 8888:8888 -v \"$PWD\":/home/jovyan/work systemsgenetics/gsforge_interactive:latest\n",
-    "```\n",
+    "### Maintaining Docker Images\n",
     "\n",
-    "Both of the above commands mount the local directory to the `\"/home/jovyan/work\"` within the docker image.\n",
-    "(\"jovyan\" is the default user name within the jupyter docker stack container.)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "The docker images used by `GSForge` are based on the [Jupyter Docker Stacks](https://jupyter-docker-stacks.readthedocs.io/en/latest/index.html).\n"
    ]
   }
  ],
