--- a/examples/Installation.ipynb
+++ b/examples/Installation.ipynb
@@ -27,7 +27,31 @@
     "\n",
     "```bash\n",
     "pip install ./gsforge/\n",
-    "```"
+    "```\n",
+    "\n",
+    "### Using Docker\n",
+    "\n",
+    "***Update the image***\n",
+    "```bash\n",
+    "docker pull systemsgenetics/gsforge_interactive:latest\n",
+    "```\n",
+    "\n",
+    "To run `GSForge` using a jupyter notebook from a docker image:\n",
+    "\n",
+    "***Jupyter Lab***\n",
+    "\n",
+    "```bash\n",
+    "docker run --rm -p 10000:8888 -e JUPYTER_ENABLE_LAB=yes -v \"$PWD\":/home/jovyan/work systemsgenetics/gsforge_interactive:latest\n",
+    "```\n",
+    "\n",
+    "***Jupyter Notebook***\n",
+    "\n",
+    "```bash\n",
+    "docker run -p 8888:8888 -v \"$PWD\":/home/jovyan/work systemsgenetics/gsforge_interactive:latest\n",
+    "```\n",
+    "\n",
+    "Both of the above commands mount the local directory to the `\"/home/jovyan/work\"` within the docker image.\n",
+    "(\"jovyan\" is the default user name within the jupyter docker stack container.)"
    ]
   },
   {
